# rust-data-analysis

./: .gitignore  1-iris-data-analysis-rust.ipynb  2-ndarray-tutorial.ipynb  3-polars-tutorial-part-1.ipynb  4-polars-tutorial-part-2.ipynb  5-probability-theory-tutorial.ipynb  6-plotters-tutorial-part-1.ipynb  7-calculas-tutorial.ipynb  7-calculus-tutorial-part-1.ipynb  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
